[package]
name = "ingest"
description = "Single and multi-threaded custom ingestion crate for Stellar Futurenet, written in Rust."
homepage = "https://github.com/xycloo/rs-ingest"
repository = "https://github.com/xycloo/rs-ingest"
authors = ["Tommaso De Ponti @ xyclooLabs <tommasodeponti@zohomail.eu>"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
version = "0.0.3"

[dependencies]
stellar-xdr = { version = "20.0.0-rc1", features = ["std", "curr", "next", "base64", "serde"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.89"
thiserror = { version = "1.0.37"}
