[package]
name = "ingest"
description = "Single and multi-threaded custom ingestion crate for Stellar Futurenet, written in Rust."
homepage = "https://github.com/xycloo/rs-ingest"
repository = "https://github.com/xycloo/rs-ingest"
authors = ["Tommaso De Ponti @ xyclooLabs <tommasodeponti@zohomail.eu>"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
version = "0.1.1"

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.89"
thiserror = { version = "1.0.37" }
tokio = { version = "1.0", features = ["full"] }
log = "0.4.20"

[dependencies.stellar-xdr]
version = "=22.1.0"
#git = "https://github.com/stellar/rs-stellar-xdr"
#rev = "44b7e2d4cdf27a3611663e82828de56c5274cba0"
features = ["next", "curr", "serde", "base64"]
